--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a software developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Houston, TX</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Track, Video Games, Programming, Anime</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Team manager for programming projects for companies like Google</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Houston, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Love building applications to solve problems</p>
     </section>
 
     <footer id="footer">
